tests/fixtures/invalid/sorted_int.py
# Cannot call sorted() with Int
x = sorted(1)
